# intents-juno

./: .dockerignore  .gitignore  Makefile  README.md  go.mod  go.sum
.github/workflows/: deploy-mainnet-role-runtime.yml  deploy-preview-role-runtime.yml  deploy-production-canaries.yml  e2e-testnet-deploy-aws.yml  e2e-testnet-deploy.yml  release-app-binaries.yml  release-app-runtime-ami.yml  release-bridge-guest-programs.yml  release-dkg-operator-init.yml  release-operator-stack-ami.yml  release-shared-proof-services-image.yml  release-wireguard-role-ami.yml  reset-preview-role-runtime.yml
cmd/backoffice/: main.go  main_test.go
cmd/base-event-scanner/: main.go  main_test.go
cmd/base-relayer/: main.go  main_test.go
cmd/boundless-auction-calc/: main.go
cmd/bridge-api/: main.go  main_test.go
cmd/bridge-callback/: main.go  main_test.go
cmd/bridge-deploy/: main.go  main_test.go
cmd/bridge-e2e/: main.go  main_test.go
cmd/checkpoint-aggregator/: main.go  main_test.go
cmd/checkpoint-signer/: main.go  main_test.go
cmd/deposit-batch-repair/: main.go
cmd/deposit-event/: main.go  main_test.go
cmd/deposit-relayer/: main.go  main_test.go
cmd/e2e-orchestrator/: main.go
contracts/: README.md  foundry.toml
docs/: Juno Intents Whitepaper.md  dkg-trust-whitepaper.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
zk/: Cargo.toml
zk/sp1_prover_adapter/cli/: Cargo.toml
zk/sp1_prover_adapter/cli/src/: main.rs
zk/withdraw_guest/core/: Cargo.toml
zk/withdraw_guest/core/src/: lib.rs
zk/witness_fixture/cli/: Cargo.toml
zk/witness_fixture/cli/src/: lib.rs  main.rs
(+529 files in other folders)
