[package]
name = "sp1-prover-adapter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sp1-sdk = "6.0.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
