[package]
name = "withdraw-guest-core"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32fast = { version = "1.5.0", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
orchard = { version = "0.12.0", default-features = false }
zcash_note_encryption = { version = "0.4.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand_core = { version = "0.6.4", default-features = false }

