[package]
name = "guest-witness-fixture"
version = "0.1.0"
edition = "2024"

[dependencies]
deposit-guest-core = { path = "../../deposit_guest/core" }
withdraw-guest-core = { path = "../../withdraw_guest/core" }
hex = "0.4.3"
orchard = { version = "0.12.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
zcash_note_encryption = { version = "0.4.1", default-features = false, features = ["alloc"] }
